[gd_scene load_steps=10 format=3 uid="uid://b28j8lcgek2f"]

[ext_resource type="Texture2D" uid="uid://c8wqqh6gb0nuk" path="res://sprites/menu/charselect/CharacterSelect_hover_bg.png" id="1_8pusf"]
[ext_resource type="Script" uid="uid://dn0oqhnxlqm7b" path="res://mods/characters/empty/scene/characterselect/characterslot_empty.gd" id="1_v08l7"]
[ext_resource type="Texture2D" uid="uid://3hga0dahx56y" path="res://sprites/menu/charselect/CharacterSelect_normal_bg.png" id="2_p16hk"]
[ext_resource type="Texture2D" uid="uid://cbnbk3djdrniw" path="res://sprites/menu/charselect/CharacterSelect_select_bg.png" id="3_d0evj"]
[ext_resource type="Texture2D" uid="uid://737fsm8p5xox" path="res://mods/characters/bluetestball/sprites/characterselect/bluetestball.png" id="4_yptlw"]
[ext_resource type="Texture2D" uid="uid://btv8r3lyna733" path="res://sprites/menu/charselect/CharacterSelect_normal_border.png" id="5_uwxvt"]
[ext_resource type="Texture2D" uid="uid://7hbxhtwk16pt" path="res://sprites/menu/charselect/CharacterSelect_select_bolder.png" id="6_4ucjx"]
[ext_resource type="Texture2D" uid="uid://cq8kfcxku5t1m" path="res://sprites/menu/charselect/CharacterSelect_hover_border.png" id="7_vrv8o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fklg4"]
animations = [{
"frames": [],
"loop": true,
"name": &"current",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8pusf")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p16hk")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d0evj")
}],
"loop": true,
"name": &"select",
"speed": 5.0
}]

[node name="characterslot_empty" type="Panel"]
script = ExtResource("1_v08l7")

[node name="CharSelect_BG" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(32, 32)
sprite_frames = SubResource("SpriteFrames_fklg4")
animation = &"normal"
autoplay = "normal"

[node name="CharSelect_Char" type="TextureRect" parent="CharSelect_BG"]
texture_filter = 1
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("4_yptlw")
metadata/_edit_use_anchors_ = true

[node name="CharSelect_FG" type="TextureRect" parent="CharSelect_BG/CharSelect_Char"]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_uwxvt")
metadata/_edit_use_anchors_ = true

[node name="SlotButton" type="TextureButton" parent="CharSelect_BG/CharSelect_Char/CharSelect_FG"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture_normal = ExtResource("5_uwxvt")
texture_pressed = ExtResource("6_4ucjx")
texture_hover = ExtResource("7_vrv8o")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CharSelect_BG/CharSelect_Char/CharSelect_FG/SlotButton" to="." method="_on_slot_button_pressed"]
